# vrcmrd

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx  tailwind-test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Advisory.ts  AdvisoryCondition.ts  AdvisoryGroupCondition.ts  AdvisoryLevel.ts  GetUsernameResponse.ts  Notice.ts  TrustRank.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: advisories.rs  lib.rs  main.rs  notices.rs
src-tauri/src/api/: avatar_search.rs  groups.rs  instance.rs  mod.rs  request.rs  request_monitoring.rs  user.rs  xsoverlay.rs
src-tauri/src/memory/: advisories.rs  instance.rs  mod.rs
src-tauri/src/memory/users/: avatar.rs  mod.rs
src-tauri/src/monitoring/: avatars.rs  file_analysis.rs  instance.rs  join_leave.rs  kick.rs  mod.rs  path.rs
src-tauri/src/settings/: mod.rs  secret.rs
src-tauri/src/types/: advisories.rs  advisories_groups.rs  avatar.rs  instance_id.rs  mod.rs  user.rs  xsoverlay.rs
src-tauri/src/window/: mod.rs  user.rs
src/advisories/: condition.tsx  condition_group.tsx  condition_group_new.tsx  condition_new.tsx  default.ts  editor.tsx  list.tsx
src/components/: BlocksTable.tsx  Dropdown.tsx  Menubar.tsx  Notice.tsx  OverlayScrollbarsHook.tsx  SideTabs.tsx  Tabs.tsx  UserTable.tsx
src/data/: users.ts
src/entrypoints/: advisories.html  settings.html  user.html
src/window/: advisories.tsx  settings.tsx  user.tsx
src/window/main/: notices.tsx
src/window/settings/: networking.tsx  preferences.tsx
