[package]
name = "vrcmrd"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrcmrd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = "4.0.3"
#vrchatapi = "1.20.7"
tauri-plugin-dialog = "2.6.0"
chrono = "0.4.43"
keyring-core = "0.7.2"
reqwest = { version = "0.12.28", features = ["cookies", "json"] }
tokio = "1.49.0"
serde_repr = "0.1.20"
nid = "3.0.0"
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }
regex = "1.12.3"
reqwest-websocket = "0.5.1"
futures-util = "0.3.31"
notify-rust = "4.12.0"
tauri-plugin-tts = "0.1.2"
reqwest-drive = "0.1.0-alpha.9"
reqwest-middleware = "0.4.2"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }

[dependencies.vrchatapi]
git = "https://github.com/C0D3-M4513R/vrchatapi-rust.git"
branch = "feature/request-middleware"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
windows-native-keyring-store = "0.5.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = "0.3.3"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5.0"
